# kintsu

./: .facts.db  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  mise.toml  out.txt  rustfmt.toml  timings.json  typos.toml  yamlfmt.yaml
cli/: Cargo.toml
cli/src/: cli.rs
core/: Cargo.toml
core/src/: context.rs  convert.rs  generate.rs  lib.rs  namespace.rs  protocol.rs  ty.rs  utils.rs
core/src/checks/: mod.rs  self_ref.rs
core/src/generate/: context.rs  decl_ext.rs  decl_gen.rs  files.rs  matcher.rs  remote.rs  rust.rs  rust_decl.rs
core/src/snapshots/: kintsu_core__generate__test__config_loader.snap.new  operation_api_core__generate__test__config_loader.snap
derives/: Cargo.toml
derives/src/: derive_enum.rs  derive_error.rs  derive_one_of.rs  derive_struct.rs  generate_module.rs  generate_ops.rs  lib.rs  shared.rs
env/: .gitignore  Cargo.toml
env-client/: Cargo.toml
env-client/src/: lib.rs
env/migrations/1_local_env/: down.sql  up.sql
env/src/: lib.rs  models.rs  schema.rs
events/: Cargo.toml
events/src/: bundle.rs  collector.rs  diagnostic.rs  lib.rs  reporter.rs
examples/gen-a/: Cargo.toml  op-gen.toml
examples/gen-a/src/: lib.rs
examples/gen-a/tests/: test_ser.rs
fs/: Cargo.toml  build.rs
fs/src/: lib.rs  match_paths.rs  memory.rs  physical.rs
manifests/: Cargo.toml
manifests/src/: config.rs  lib.rs  lock.rs  manager.rs  package.rs  registry.rs  rules.rs  version.rs
parser/: .gitignore  Cargo.toml  build.rs
parser/samples/: array.ks  bench_enum.ks  bench_struct.ks  complex_union.ks  enum.ks  error.ks  explicit_oneof.ks  message_with_enum.ks  mod.ks  ns.ks  op.ks  some_import.ks  test_message.ks
parser/samples/abc-corp/: schema.toml
parser/samples/bar-corp/: schema.toml
parser/samples/errors/: invalid.ks  invalid_parse.txt
parser/src/: ast.rs  declare.rs  defs.rs  diagnostics.rs  lib.rs  tokens.rs  tst.rs  utils.rs
parser/src/ast/: anonymous.rs  array.rs  comment.rs  enm.rs  err.rs  import.rs  items.rs  meta.rs  namespace.rs  one_of.rs  op.rs  path.rs  strct.rs  ty.rs  ty_def.rs  type_expr.rs  union.rs  variadic.rs
parser/src/ctx/: cache.rs  common.rs  mod.rs  namespace.rs  paths.rs  registry.rs  schema.rs
parser/src/declare/: comments.rs  context.rs  convert.rs  definitions.rs  enums.rs  fields.rs  meta.rs  namespace.rs  root.rs  types.rs
parser/src/fmt/: mod.rs  printer.rs
parser/src/tokens/: ast.rs  error.rs  stream.rs  toks.rs
registry/: .gitignore  Cargo.toml  registry.toml
registry-auth/: Cargo.toml
registry-auth/src/: lib.rs
registry-core/: Cargo.toml
registry-core/src/: lib.rs  models.rs
registry-db/: .gitignore  Cargo.toml  diesel.toml  gen.py  gen.sh
registry-db/fixtures/: downloads.py  downloads.sql  packages.sql  packagesv2.sql
registry-db/migrations/0001_registry/: down.sql  up.sql
registry-db/src/: fixtures.rs  lib.rs  schema.rs  tst.rs
registry-db/src/engine/: api_key.rs  authorization.rs  events.rs  favourites.rs  fluent.rs  mod.rs  org.rs  org_invite.rs  package.rs  principal.rs  schema_admin.rs  schema_role.rs  user.rs  version.rs
registry-db/src/entities/: api_key.rs  api_key_public.rs  downloads.rs  mod.rs  org.rs  org_invitation.rs  org_role.rs  package.rs  prelude.rs  schema_role.rs  types.rs  user_favourite.rs  users.rs  version.rs
registry-db/src/handlers/: auth.rs  downloads.rs  mod.rs  org.rs  packages.rs
registry-db/src/models/: api_key.rs  mod.rs  org.rs  org_admin.rs  package.rs  schema_admin.rs  scopes.rs  user.rs  version.rs
registry-db/src/tokens/: mod.rs
registry-db/tests/: api_key_tests.rs  authorization_tests.rs  favourites_tests.rs  fixtures_tests.rs  org_invite_tests.rs  org_tests.rs  package_tests.rs  schema_role_tests.rs  user_tests.rs  version_tests.rs
registry-db/tests/common/: builders.rs  fixtures.rs  mod.rs
registry-errors/: Cargo.toml
registry-errors/src/: lib.rs
registry-events/: Cargo.toml
registry-events/benches/: events.rs
registry-events/src/: lib.rs
registry-storage/: Cargo.toml
registry-storage/src/: lib.rs  manager.rs  s3.rs  tst.rs
registry/migrations/0001_registry/: up.sql
registry/src/: apikey.rs  app.rs  config.rs  lib.rs  models.rs  oauth.rs  principal.rs  resolver.rs  routes.rs  session.rs
registry/src/config/: database.rs  mod.rs  session.rs  tls.rs
registry/src/oauth/: config.rs
registry/src/routes/: auth.rs  favourites.rs  org.rs  packages.rs
registry/tests/: apikey_tests.rs  permission_tests.rs  principal_tests.rs  validation_tests.rs
registry/tests/common/: ctx.rs  mod.rs  request.rs  response.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: shared.rs  test_datetime.rs  test_enum.rs  test_error.rs  test_gen.rs  test_one_of.rs  test_ops.rs  test_struct.rs  test_struct_with_enum.rs
sdk/tests/snapshots/: test_datetime__test_chrono__smoke_comment_with_test_chrono.snap  (+13 more)
test-suite/: Cargo.toml
test-suite/benches/: compiling.rs  parsing.rs
test-suite/fragments/: abc_corp_manifest.toml  app_lib.ks  app_manifest.toml  bar_enum.ks  bar_with_external_type.ks  base_lib.ks  base_manifest.toml  common_lib.ks  common_manifest.toml  dep_lib.ks  dep_manifest.toml  duplicate_type.ks  internal_namespace.ks  invalid_enum_discriminant.ks  lib_a_lib.ks  lib_a_manifest.toml  lib_b_lib.ks  lib_b_manifest.toml  malformed_manifest.toml  middle_lib.ks  middle_manifest.toml  minimal_lib.ks  minimal_manifest.toml  missing_dep_use.ks  missing_namespace_use.ks  oneof_mixed.ks  pkg_with_dep_manifest.toml  string_enum.ks  tagging_variants.ks  top_lib.ks  top_manifest.toml  type_expr_basic.ks  type_expr_nested.ks  undefined_type.ks  union_or_basic.ks  wrong_import_syntax.ks
test-suite/src/: cli_tests.rs  lib.rs  many.rs
test-suite/tests/: cli_klx_tests.rs  cli_kmt_tests.rs  cli_kns_tests.rs  cli_kpk_tests.rs  cli_kpr_tests.rs  cli_kte_tests.rs  cli_ktg_tests.rs  cli_ktr_tests.rs  cli_kty_tests.rs  cli_kun_tests.rs  cli_success_tests.rs  failure_tests.rs  generated_graph_tests.rs  lockfile_tests.rs  success_tests.rs
(+187 files in other folders)
