[workspace]
members = ["cli", "cli-core", "core", "derives", "env", "env-client", "errors", "events", "examples/*", "fs", "manifests", "parser", "registry", "registry-auth", "registry-core", "registry-db", "registry-errors", "registry-events", "registry-storage", "sdk", "test-macros", "test-suite", "testing"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "../LICENSE.md"
homepage = "https://github.com/kintsu/kintsu"
authors = ["Joshua Auchincloss <joshua.auchincloss@proton.me>"]


[workspace.dependencies]
actix = "*"
actix-http = "3"
actix-web = "4"
async-channel = "2.3"
aws-config = "1"
aws-sdk-s3 = "1"
bon = "3"
bytes = "1.10"
cfg-if = "1"
chrono = "0.4"
clap = "4.5"
clap-markdown = "0.1.5"
config = "0.15"
console = "0.16"
convert_case = "0.10"
crossbeam = "0.8"
ctor = "0.6"
darling = "0.23"
dashmap = "6"
diesel = "2"
diesel-async = "0.7"
divan = { version = "4", package = "codspeed-divan-compat" }
dotenvy = "0.15"
dyn-inventory = "0.2"
futures = "0.3"
futures-util = "*"
glob = "0.3"
human-panic = "2"
indicatif = "0.18"
insta = "1.45.1"
inventory = "0.3"
logos = "0.16"
miette = "7"
num_cpus = "1.16"
octocrab = "0.49"
paste = "1"
pathfinding = "4"
pest = "2.8"
pest_derive = "2.8"
prettyprint = "0.8"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
rayon = "1"
regex = "1"
reqwest = "0.12"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
sea-orm = "2.0.0-rc.18"
secrecy = "0.10"
semver = "1"
serde = "1"
serde-jsonlines = "0.7"
serde_json = "1"
serde_repr = "0.1"
serde_yaml = "=0.9.33"
sha256 = "1"
syn = "2"
tempfile = "3"
test-case = "3"
testcontainers = "*"
testcontainers-modules = "*"
thiserror = "2"
time = "0.3"
tokio = "1"
toml = "0.9"
tracing = "0.1"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"
url = "2"
utoipa = "5"
utoipa-actix-web = "0.1"
utoipa-rapidoc = "6"
utoipa-redoc = "6"
utoipa-swagger-ui = "9"
validator = "0.20"
