[package]
name = "kintsu-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
generate = []
chrono = ["dep:chrono"]
time = ["dep:time"]
# python = ["dep:pyo3"]

[dependencies]
kintsu-env-client = { path = "../env-client" }
kintsu-fs = { path = "../fs" }
kintsu-manifests = { path = "../manifests" }
kintsu-parser = { path = "../parser" }
bon = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"], optional = true }
config = { workspace = true, features = ["yaml", "json", "toml"] }
convert_case = { workspace = true }
dyn-inventory = { workspace = true }
glob = { workspace = true }
inventory = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
paste = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
test-case = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"], optional = true }
toml = { workspace = true }
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = [] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
kintsu-testing = { path = "../testing" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

