[package]
name = "kintsu-derives"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = ["chrono", "time"]
chrono = ["kintsu-core/chrono"]
time = ["kintsu-core/time"]

[lib]
proc-macro = true

[dependencies]
kintsu-core = { path = "../core", features = ["generate"] }
kintsu-manifests = { path = "../manifests" }
convert_case = {workspace = true}
darling = {workspace = true}
glob = {workspace = true}
proc-macro2 = {workspace = true}
quote = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
syn = {workspace = true}
toml = {workspace = true}

[dev-dependencies]
kintsu-testing = { path = "../testing" }
test-case = {workspace = true}
