[package]
name = "kintsu-env"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
kintsu-fs = { path = "../fs" }
kintsu-manifests = { path = "../manifests" }
diesel = {  features = ["sqlite", "serde_json"], workspace = true}
diesel-async = {  features = ["sqlite"], workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

