[package]
name = "kintsu-events"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
kintsu-errors = { path = "../errors" }
actix = {workspace = true}
miette = {  features = ["fancy"], workspace = true}
serde = {  features = ["derive"], workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {  features = ["sync", "time"], workspace = true}
tracing = {workspace = true}
