[package]
name = "kintsu-fs"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
fs-test = []

[dependencies]
glob = {workspace = true}
serde = { workspace = true, features = ["derive"] }
thiserror = {workspace = true}
tokio = { workspace = true, features = ["fs"] }
tracing = {workspace = true}

