[package]
name = "kintsu-fs"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
fs-test = []
api = ["dep:utoipa"]
db = ["dep:sea-orm", "dep:serde_json"]


[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }

