[package]
name = "kintsu-manifests"
edition.workspace = true
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
api = ["dep:utoipa"]
# db = ["dep:sea-orm"]

[dependencies]
kintsu-fs = { path = "../fs" }
config = { workspace = true, features = ["toml"] }
convert_case = { workspace = true }
glob = { workspace = true }
prettyprint = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
test-case = { workspace = true }
