[package]
name = "kintsu-registry-db"
edition.workspace = true
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
test = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "kintsu-registry-storage/test",
    "kintsu-registry-events/test",
]

[dependencies]
kintsu-fs = { path = "../fs", features = ["db", "api"] }
kintsu-manifests = { path = "../manifests" }
kintsu-parser = { path = "../parser", features = ["db", "api"] }
kintsu-registry-auth = { path = "../registry-auth" }
kintsu-registry-events = { path = "../registry-events" }
kintsu-registry-storage = { path = "../registry-storage" }
chrono = { workspace = true, features = ["serde"] }
paste = { workspace = true }
rand = { workspace = true }
sea-orm = { features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
], workspace = true }
secrecy = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha256 = { workspace = true }
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { features = [
    "postgres",
], workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["chrono"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
kintsu-registry-auth = { path = "../registry-auth" }
kintsu-registry-events = { path = "../registry-events", features = ["test"] }
kintsu-registry-storage = { path = "../registry-storage", features = ["test"] }
chrono = { workspace = true }
sea-orm = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { features = ["postgres"], workspace = true }
tokio = { workspace = true, features = ["full", "rt-multi-thread", "macros"] }
