[package]
name = "kintsu-registry-errors"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
api = ["utoipa", "serde"]

[dependencies]
kintsu-errors = { path = "../errors" }
serde = { workspace = true, optional = true, features = ["derive"] }
utoipa = { workspace = true, optional = true }
