[package]
name = "kintsu-registry-events"
edition.workspace = true
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
test = []  # Enables test mode with no-op event emission

[[bench]]
name = "events"
harness = false

[dependencies]
kintsu-registry-auth = { path = "../registry-auth" }
actix = {  workspace = true}
serde-jsonlines = {workspace = true}
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
futures = {workspace = true}
