[package]
name = "kintsu-registry"
edition = "2024"
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "kintsu-registry"

[dependencies]
kintsu-fs = { path = "../fs", features = ["api"] }
kintsu-manifests = { path = "../manifests", features = ["api"] }
kintsu-parser = { path = "../parser", features = ["api"] }
kintsu-registry-auth = { path = "../registry-auth" }
kintsu-registry-core = { path = "../registry-core" }
kintsu-registry-db = { path = "../registry-db" }
kintsu-registry-errors = { path = "../registry-errors", features = ["api"] }
kintsu-registry-events = { path = "../registry-events" }
kintsu-registry-storage = { path = "../registry-storage" }
actix-web = { workspace = true, features = ["secure-cookies", "rustls-0_23"] }
chrono = { workspace = true, features = ["serde"] }
convert_case = { workspace = true }
dotenvy = { workspace = true }
octocrab = { workspace = true }
reqwest = { workspace = true }
rustls = { features = ["ring"], workspace = true }
rustls-native-certs = {workspace = true}
rustls-pemfile = {workspace = true}
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
secrecy = { features = ["serde"], workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true,  features = ["log"]}
tracing-subscriber = { workspace = true }
url = { features = ["serde"], workspace = true }
utoipa = { features = ["actix_extras", "chrono"], workspace = true }
utoipa-actix-web = { workspace = true }
utoipa-rapidoc = { features = ["actix-web"], workspace = true }
utoipa-redoc = { features = ["actix-web"], workspace = true }
validator = { workspace = true }

[dev-dependencies]
kintsu-registry-db = { path = "../registry-db", features = ["test"] }
kintsu-registry-storage = { path = "../registry-storage", features = ["test"] }
actix-http = { workspace = true }
