[package]
name = "kintsu-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = ["chrono"]
generate = []

chrono = ["kintsu-core/chrono", "kintsu-derives/chrono"]
time = ["kintsu-core/time", "kintsu-derives/time"]

[dependencies]
kintsu-core = { path = "../core" }
kintsu-derives = { path = "../derives" }
serde_repr = {workspace = true}

[dev-dependencies]
kintsu-testing = { path = "../testing" }
chrono = { workspace = true, features = ["serde"] }
paste = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
thiserror = {workspace = true}
time = { workspace = true, features = ["serde"] }
toml = {workspace = true}

