[package]
name = "kintsu-test-suite"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "compiling"
harness = false

[dependencies]
kintsu-fs = { path = "../fs", features = ["fs-test"] }
kintsu-parser = { path = "../parser" }
kintsu-manifests = { path = "../manifests" }
kintsu-testing = { path = "../testing" }
kintsu-test-macros = { path = "../test-macros" }


ctor = "0.6"
serde-jsonlines = "0.7"
serde_json.workspace = true
paste.workspace = true
bon = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
divan = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
