[package]
name = "kintsu-test-suite"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "compiling"
harness = false

[dependencies]
kintsu-fs = { path = "../fs", features = ["fs-test"] }
kintsu-manifests = { path = "../manifests" }
kintsu-parser = { path = "../parser" }
kintsu-test-macros = { path = "../test-macros" }
kintsu-testing = { path = "../testing" }
bon = { workspace = true }
ctor = {workspace = true}
divan = { workspace = true }
paste = {workspace = true}
rand = { workspace = true }
serde = { workspace = true }
serde-jsonlines = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

