[package]
name = "test-gen-a"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
kintsu-sdk = { path = "../../sdk" }
chrono = { workspace = true, features = ["serde"] }
serde = {workspace = true}

[dev-dependencies]
kintsu-testing = { path = "../../testing" }
paste = {workspace = true}
serde_json = {workspace = true}
test-case = {workspace = true}
toml = {workspace = true}
